Fixed the header of post, need to fix the alignemnt of picture in modal post

--- a/src/index.css
+++ b/src/index.css
@@ -165,4 +165,15 @@ button {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  margin-right: 10px;
+}
+.flex {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.align-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
